moved news ticker to bottom of page

--- a/web/src/app/news/news.component.html
+++ b/web/src/app/news/news.component.html
@@ -1,2 +1,4 @@
-<p>{{ newsTitle }}</p>
-<p>{{ newsDescription }}</p>
+<div class="news-container">
+    <p class="news-title">{{ newsTitle }}</p>
+    <p class="news-description">{{ newsDescription }}</p>
+</div>
