--- a/web/src/app/clock/clock.component.html
+++ b/web/src/app/clock/clock.component.html
@@ -1,1 +1,6 @@
-<p>clock works!</p>
+<p id="currDate">{{ date }}</p>
+<p id="currTime">{{ time }}</p>
+<p id="dateExtra">
+    <sup>{{ seconds }}</sup>
+    <sub>{{ ampm }}</sub>
+</p>
