--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -11,7 +11,7 @@ body {
 
 * {
   box-sizing: border-box;
-  font-family: 'Titillium Web', serif;
+  font-family: 'Barlow';
   color: white;
   background-color: black;
 }
