--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -3,6 +3,8 @@ html {
   font-family: 'Barlow';
   color: white;
   background-color: black;
+  width: 100%;
+  height: 100%;
 }
 
 p {
@@ -12,4 +14,11 @@ p {
 body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+app-root {
+  width: 100%;
+  height: 100%;
 }
