--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -15,11 +15,13 @@ app-clock {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
-    bottom: calc(200px - 60px);
-    left: calc(-200px + 60px);
+    bottom: calc(200px - 60px + 50px);
+    left: calc(-200px + 60px + 50px);
 }
 
 app-weather {
     transform: rotate(-90deg);
     position: absolute;
+    top: 50px;
+    left: 50px;
 }
