--- a/web/src/app/news/news.component.scss
+++ b/web/src/app/news/news.component.scss
@@ -1,12 +1,12 @@
 .news-title {
     text-align: center;
-    font-size: 16px;
+    font-size: 2em;
     white-space: none;
 }
 
 .news-description {
     text-align: center;
-    font-size: 12px;
+    font-size: 1.5em;
     white-space: none;
 }
 
